# nonans

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
bench/: run.py
bench/reference/: aggressive_lr.py  custom_kernel.py  fp8_training.py  large_batch_inference.py  long_context_attention.py  long_context_inference.py  mixed_precision_70b.py  rlhf_grpo.py
docs/: architecture.md  quickstart.md
examples/: fsdp_70b.py  pytorch_minimal.py  vllm_inference.py
nonans/: __init__.py  client.py  wrap.py
nonans/detect/: __init__.py  events.py  hooks.py  telemetry.py
tests/: test_client.py  test_public_api.py
tests/detect/: test_events.py  test_hooks.py  test_telemetry.py
